Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110320

qmllint: Controls2.Action is not defined

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.5.0, 6.5, 6.6.0
    • 6.4.2
    • QML: Tooling
    • None
    • Linux/X11
    • 07185214d (dev), 5e66a8c4f (6.5)

      I attached a basic example. QQC2.ApplicationWindows works fine, but QQC2.Action doesn't.

      I first thought it was caused by the import alias, but I get the same results if I remove the import alias, so it's not it.

       

      Here is the output:

      Warning: /home/cschwan/kde/test-qml6/main.qml:11:5: QQC2.Action was not found. Did you add all import paths?
      
          QQC2.Action {}
      
          ^^^^
      
      Info: Did you mean "QQC2.Button"?
      
          QQC2.Button.Action {}
      
          ^^^^^^^^^^^
      
      Warning: /home/cschwan/kde/test-qml6/main.qml:11:5: Type QQC2.Action is used but it is not resolved
      
          QQC2.Action {}
      
          ^^^^
      
      
       

        1. CMakeLists.txt
          0.9 kB
        2. main.cpp
          0.3 kB
        3. main.qml
          0.1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            carl-schwan-kdab Carl-Lucien Schwan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes