QmlCompiler: Fix version resolution for imports

Partially versioned imports should not be sorted useing the generic
comparison operators. We have to check each component individually.

Fixes: QTBUG-110320
Change-Id: Id75ab73ff6a4b5b040b9fcbb426e6bcf893d3d8b
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 07185214ddc593f460b053acd89bbd96b62a2ba5)