tests/auto/qml/qmllint/data/onlyMajorVersion.qml
@@ -1,0 +1,8 @@
+import QtQuick.Controls 2 as QQC2
+
+QQC2.ApplicationWindow {
+    height: 400
+    width: 400
+    visible: true
+    QQC2.Action {} // Action because it appeared in version 2.3
+}
