tests/auto/qml/qqmljsscope/data/qualifiedName.qml
@@ -3,7 +3,7 @@ import QualifiedNamesTests 5.0 as MyQualifiedImport
 import QtQuick 2.0
 
 Item {
-    A {}
+    // A {} <- QML_REMOVED_IN_VERSION(6, 0)
 
     B {}
 
